--- a/quiz/public/index.html
+++ b/quiz/public/index.html
@@ -11,11 +11,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Quiz App</title>
+    <title>Leaf Quiz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="home"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
